--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 』",
-    "description": "〔 سـورس الملك 𝚂𝙾𝚄𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : 𝙰𝙱𝙳𝚄𝙻𝙻𝙰𝙷",
+    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 ÂDMÃÑ 』",
+    "description": "〔 سـورس ادمان 𝚂𝙾𝚄𝚁𝙲𝙴 𝑱𝒆𝒆𝒏 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : ADMAN",
     "logo": "https://graph.org/file/2f199ef466e7950dd5e79.jpg",
     "keywords": [
     "python3",
@@ -67,12 +67,12 @@
       },
       "CHANNEL_NAME": {
         "description": "اسم قناتك.",
-        "value": "𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶",
+        "value": "𝚂𝚄𝙾𝚁𝙲𝙴 𝑱𝒆𝒆𝒏",
         "required": true
       },
       "CHANNEL_LINK": {
         "description": "يوزر قناتك بدون @.",
-        "value": "EF_19",
+        "value": "TI_M_ll",
         "required": true
       },
       "LOGGER_ID": {
