--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 』",
-    "description": "〔 سـورس الملك 𝚂𝙾𝚄𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : 𝙰𝙱𝙳𝚄𝙻𝙻𝙰𝙷",
+    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 𝑱𝒆𝒆𝒏 』",
+    "description": "〔 سـورس ادمان 𝚂𝙾𝚄𝚁𝙲𝙴 𝑱𝒆𝒆𝒏 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : ادمان",
     "logo": "https://graph.org/file/2f199ef466e7950dd5e79.jpg",
     "keywords": [
     "python3",
