--- a/app.json
+++ b/app.json
@@ -67,12 +67,12 @@
       },
       "CHANNEL_NAME": {
         "description": "اسم قناتك.",
-        "value": "𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶",
+        "value": "𝚂𝚄𝙾𝚁𝙲𝙴 𝑱𝒆𝒆𝒏",
         "required": true
       },
       "CHANNEL_LINK": {
         "description": "يوزر قناتك بدون @.",
-        "value": "EF_19",
+        "value": "TI_M_ll",
         "required": true
       },
       "LOGGER_ID": {
